# so-trends

./: .gitignore  CLAUDE.md  app.py  build_cache.py  pyproject.toml  render.yaml  soq.py
data/: cache.parquet
templates/: index.html
