[project]
name = "soq"
version = "0.1.0"
description = "Stack Overflow Developer Survey trend analyser"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "flask>=3.1",
    "matplotlib>=3.10",
    "pandas>=3.0",
]

[project.optional-dependencies]
production = ["gunicorn>=23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
